# world_map

./: .env  .gitignore  README.md  docker-compose.yml  index.html  package.json
api/: README.md  api.Dockerfile  package.json
api/src/: app.module.ts  main.ts
api/src/controllers/: location.controller.ts
api/src/dto/: location.dto.ts
api/src/entities/: geojson.entity.ts
api/src/services/: location.service.ts
app/: README.md  app.Dockerfile  package.json
app/public/: cities.json
app/src/: App.tsx
app/src/babylon/: babylonScene.ts  cityOnMap.ts  createEarth.ts  drawGeoJson.ts  earth.ts  geojson.ts  surfaceCamera.ts  useBabylonScene.ts
app/src/components/: Carousel.tsx  CityInformation.tsx  worldMap.tsx
app/src/interfaces/: city.ts  hurricane.ts
app/src/types/: global.d.ts
app/src/utils/: ConvertGeo.ts  cities.json
server/: api.Dockerfile  pyproject.toml
server/api/admin/: __init__.py  geometry_data.py  spatial.py
server/api/migrations/: 0001_initial.py
server/api/models/: __init__.py  geometry_data.py  spatial_type.py
server/api/serializers/: geo_data.py
server/api/utils/: compute.py
server/api/views/: geo_data.py
server/app/: settings.py  urls.py
src/: App.tsx
src/babylon/: createCityMarkers.ts  createEarth.ts  createHurricanRepresentation.ts  drawGeoJson.ts  useBabylonScene.ts
src/babylon/interaction/: cityInteraction.ts
src/components/: CityInformation.tsx  HurricaneInformation.tsx  WorldMap.tsx
src/components/worldmap/: InteractionManager.ts  WorldMap.tsx  (+5 more)
src/utils/: ConvertGeo.ts  cities.json  hurrican.json
(+7 files in other folders)
